@@ -1,6 +1,37 @@
 $(function(){
 
 	// Check user function
+  function emailFn() {
+
+		this.email = '';
+
+		this.check = function() {
+			var val = $("#id_email").val();
+			if (val.length == 0) {
+				$("#email_img").hide();
+				return;
+			}
+
+      if (this.user != val) {
+				$("#email_img").attr("src", "/site_media/images/loading.gif");
+        $("#email_img").show();
+
+   			$.getJSON("/accounts/check_email_unused/" + val + "/", function(data) {
+          if (data.success) {
+            $("#email_img").attr("src", "/site_media/images/good.png");
+          } else {
+            $("#email_img").attr("src", "/site_media/images/error.png");
+            $("#email_img").attr("alt", data.error_message);
+          }
+				});
+
+				this.user = val;
+      }
+		}
+
+  }
+
+	// Check user function
   function userFn() {
 
 		this.user = '';
@@ -66,8 +97,10 @@ $(function(){
   });  
 
 	var user = new userFn();
+	var email = new emailFn();
 	var pass = new passwordFn();
 	$("#id_username").blur(user.check);
+	$("#id_email").blur(email.check);
 	$("#id_password1").blur(pass.check);
 	$("#id_password2").blur(pass.check);
 
